force-app/main/default/objects/recTypesPTask__c/recTypesPTask__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - Process Task</label>
</CustomObject>