force-app/main/default/objects/recTypesPTask__c/fields/Internal_Account_Approval_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Approval_Record_Type__c</fullName>
    <label>Internal Account Approval Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>