force-app/main/default/objects/recTypesPTask__c/fields/Legal_Contract_Task__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract_Task__c</fullName>
    <label>Legal Contract Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>