force-app/main/default/objects/recTypesPTask__c/fields/Opportunity_Qualify_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualify_Opportunity__c</fullName>
    <label>Opportunity Qualify Opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>